# new_project_mlops

./: README.md  load_from_env_file.py  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  test.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
configs/: model_conf.yaml  sweep.yaml  train_conf.yaml
data/models/: model.pt
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/new_project_mlops/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py
wandb/run-20260108_111250-3talrux3/: run-3talrux3.wandb
wandb/run-20260108_111250-3talrux3/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_112217-em4ssv1l/: run-em4ssv1l.wandb
wandb/run-20260108_112217-em4ssv1l/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_113041-zb1uzmlw/: run-zb1uzmlw.wandb
wandb/run-20260108_113041-zb1uzmlw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_120012-vjwzz31b/: run-vjwzz31b.wandb
wandb/run-20260108_120012-vjwzz31b/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260108_120322-eh0udzsn/: run-eh0udzsn.wandb
wandb/run-20260108_120322-eh0udzsn/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/sweep-1oyjlk1h/: config-eh0udzsn.yaml  config-gjuu1wx8.yaml  config-vjwzz31b.yaml
wandb/sweep-3oqdtqxr/: config-dphd0hit.yaml  config-sdx21dlc.yaml  config-x6ay92b9.yaml
(+40 files in other folders)
