[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "new_project_mlops"
version = "0.0.1"
description = "Testing this setup and layout, not the final project"
authors = [
  { name = "Astridur", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
train = "new_project_mlops.train:train"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
